--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <style>
     .imgSize {
         background-color: mediumaquamarine;
-        width: 50px;
-        height: 50px;
+        width: 180px;
+        height: 180px;
     }
 
     .imgRound {
@@ -59,7 +59,7 @@
 
 <section class="splash">
 <br><br><br><br>
-    <img src="./profile_files/anna.jpg" class="imgSize, imgRound">
+    <img src="./profile_files/anna.png" class="imgSize, imgRound">
 
     <!-- <h1>itbackyard.com</h1> -->
     <h1>Anita Poudel | Offical</h1><br>
